2011-05-24  Leo Yang  <leo.yang@torchmobile.com.cn>

Reviewed by Ryosuke Niwa.

        [SVG] Assertion failure by dragging text between input fields inside <foreignObject>s
        https://bugs.webkit.org/show_bug.cgi?id=60692

        Add NULL check of 'holder' in WebCore::ReplacementFragment::ReplacementFragment()
        before call VisibleSelection::selectionFromContentsOfNode() to prevent crashing.

        Test: editing/pasteboard/drag-drop-input-in-svg.svg

        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplacementFragment::ReplacementFragment):
2011-05-24  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Ryosuke Niwa.

        [SVG] Assertion failure by dragging text between input fields inside <foreignObject>s
        https://bugs.webkit.org/show_bug.cgi?id=60692

        Test case to verify dragging and dropping text between input fields
        inside SVG <foreignObject>s. Test passes if no crash occurs in debug mode.

        Drag and drop is not supported in Qt DRT, so skip this case on Qt platform.

        * editing/pasteboard/drag-drop-input-in-svg-expected.txt: Added.
        * editing/pasteboard/drag-drop-input-in-svg.svg: Added.
        * platform/qt/Skipped:


Canonical link: https://commits.webkit.org/76803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87248 268f45cc-cd09-0410-ab3c-d52691b4dbfc